Module 2 Completed and portfolio update along with module 2 brief info and assignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1015,6 +1015,10 @@ section {
   padding: 0;
 }
 
+.portfolio-description img {
+  padding: 10px;
+}
+
 /*--------------------------------------------------------------
 # Pricing
 --------------------------------------------------------------*/
